[tool.poetry]
name = "telegram-outreach"
version = "0.1.0"
description = "Telegram outreach automation (DM/invite) over multiple userbot accounts"
authors = ["botfactoryby <botfactoryby@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.36"
aiogram = "^3.4"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.2"
loguru = "^0.7"
structlog = "^24.1"
apscheduler = "^3.10"
cryptography = "^42.0"
python-dateutil = "^2.9"
python-socks = {extras = ["asyncio"], version = "^2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
